--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "@ckpack/vue-color": "^1.5.0",
+    "hotkeys-js": "^3.12.0",
+    "paper": "^0.12.17",
     "pinia": "^2.1.7",
+    "uuid4": "^2.0.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
