--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pinia": "^2.1.7",
     "uuid4": "^2.0.3",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@arco-design/web-vue": "^2.53.0",
