--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "uuid4": "^2.0.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
+    "vue3-colorpicker": "^2.2.2",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
